sumo/tests/dfrouter/errors/network/edge/lane/root__edge__lane#length__empty21/errors.dfrouter
Error: Missing length definition in lane '2_0'.
Quitting (on error).
